--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@auth0/angular-jwt": "^5.0.1",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.5.2",
+    "bootswatch": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
